Update the high scaling settings after an XCB screen is added

Without this, the newly-added screen will still have the
scaleFactorProperty unset, which means QScreen::devicePixelRatio will
return 1.0. That differs from what happens if the screen had been
detected when the application started.

This is part of the fix for the bug report, but insufficient.

Task-number: QTBUG-53500
Change-Id: Id3aab65533904562a6cbfffd14502365d86bd36d
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

cregit: fae8ee8b428ae7a406199e504b2d0eedd5059dbd https://github.com/qt/qtbase/commit/fae8ee8b428ae7a406199e504b2d0eedd5059dbd